--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502330040616"/>
+<link rel="stylesheet" href="css/style.css?v_1502417667866"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -55,7 +55,7 @@
 	.ll img{width:100%;margin-top:1rem;}
 	.relation{line-height:1;padding-top:1.062rem;}
 	.relation select{margin-top:0;padding-right:0}
-    .id_face .loading-img,.id_side .loading-img{    width: 5rem;
+    .id_hand .loading-img,.id_face .loading-img,.id_side .loading-img{    width: 5rem;
     height: auto;
     position: absolute;
     left: 50%;
@@ -104,14 +104,15 @@
             </div>
             <!-- <div class="id_head">
 				请上传手持身份证正面照片
-			</div>
+			</div> -->
 			<div class="id_hand ">
-				<img src="img/id3.png" id="zstc">
+                <img src="img/lodding.gif" alt="" id="loadA" class="loading-img">
+				<img src="img/shouchishenfenzheng.png" id="zstc">
 				<input type="file" name="file" id="Photo_C" accept="image/*" capture="camera" onchange="selectFileImage(this);">
 				<p>
 					上传手持身份证正面
 				</p>
-			</div> -->
+			</div>
             <!-- <div class="id_head" style="color:#f30">*注：所有照片需横向拍摄，正向朝上上传！</div> -->
             <!-- <div class="id_sign id_right">
 				<img src="img/id6.png" id="sign">
@@ -143,7 +144,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502330040616'></script>
+<script src='js/common/main.js?v_1502417667866'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
