--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502417667866"/>
+<link rel="stylesheet" href="css/style.css?v_1502418039069"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -100,12 +100,11 @@
                     身份证国徽面
                 </p>
             </div>
-            <div class="id_head">
-            </div>
+            
             <!-- <div class="id_head">
 				请上传手持身份证正面照片
 			</div> -->
-			<div class="id_hand ">
+			<div class="id_hand id_side">
                 <img src="img/lodding.gif" alt="" id="loadA" class="loading-img">
 				<img src="img/shouchishenfenzheng.png" id="zstc">
 				<input type="file" name="file" id="Photo_C" accept="image/*" capture="camera" onchange="selectFileImage(this);">
@@ -144,7 +143,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502417667866'></script>
+<script src='js/common/main.js?v_1502418039069'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
