--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502418354246"/>
+<link rel="stylesheet" href="css/style.css?v_1502420124963"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -86,7 +86,7 @@
 			</div> -->
             <div class="id_face">
                 <img src="img/lodding.gif" alt="" id="loadA" class="loading-img">
-                <img src="img/shenfenzheng-A.png" id="zsta">
+                <img src="img/shenfenzheng-A.png" data-src="img/shenfenzheng-A.png" id="zsta">
                 <input type="file" name="file" id="Photo_A" accept="image/*" capture="camera" onchange="selectFileImage(this);">
                 <p>
                     身份证人像面
@@ -94,19 +94,19 @@
             </div>
             <div class="id_side">
                 <img src="img/lodding.gif" alt="" id="loadA" class="loading-img">
-                <img src="img/shenfenzheng-B.png" id="zstb">
+                <img src="img/shenfenzheng-B.png" data-src="img/shenfenzheng-B.png" id="zstb">
                 <input type="file" name="file" id="Photo_B" accept="image/*" capture="camera" onchange="selectFileImage(this);">
                 <p>
                     身份证国徽面
                 </p>
             </div>
-            
+
             <!-- <div class="id_head">
 				请上传手持身份证正面照片
 			</div> -->
 			<div class="id_hand id_side">
                 <img src="img/lodding.gif" alt="" id="loadA" class="loading-img">
-				<img src="img/shouchishenfenzheng.png" id="zstc">
+				<img src="img/shouchishenfenzheng.png" data-src="img/shouchishenfenzheng.png" id="zstc">
 				<input type="file" name="file" id="Photo_C" accept="image/*" capture="camera" onchange="selectFileImage(this);">
 				<p>
 					上传手持身份证正面
@@ -143,7 +143,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502418354246'></script>
+<script src='js/common/main.js?v_1502420124963'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
