--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502434812241"/>
+<link rel="stylesheet" href="css/style.css?v_1502435843202"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -65,6 +65,7 @@
     
 <script src="js/loan/exif.js"></script>
 <script src="js/loan/jpeg_encoder_basic.js"></script>
+<script src="js/loan/MegaPixImage.js"></script>
 <script src="js/loan/uploadimage2.js"></script>
 </head>
 
@@ -143,7 +144,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502434812241'></script>
+<script src='js/common/main.js?v_1502435843202'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
