--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502440345547"/>
+<link rel="stylesheet" href="css/style.css?v_1502441521857"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -36,13 +36,13 @@
     /* 身份证 */
 
 	.id_head{clear:both;margin-bottom:.75rem;color:#399ce7;font-size:.8125rem;text-align:center;padding-top:1.25rem;border-bottom:1rem solid #e1e1e1}
-	.id_face,.id_side,.id_hand,.id_sign{display:block;width:60%;position:relative;margin:0 auto;}
+	.id_face,.id_side,.id_hand,.id_sign{display:block;width:60%;position:relative;margin:0 auto;text-align: center;}
 	.id_hand{margin:0 auto;float:none;}
 	.id_face{margin-top:1rem;}
 	.id_side{margin-top:1rem;}
 	.id_face img,.id_side img{width:100%;height: 6.5rem;}
 	.id_face p,.id_side p{color:#626262;font-size:.8125rem;text-align:center;line-height:1;margin:.825rem 0;}
-	.id_face input,.id_side input{position:absolute;width:100%;height:100%;top:0;left:0; bottom: 0;opacity:0.01}
+	.id_face input,.id_side input{position:absolute;width:100%;height:100%;top:0;left:0; bottom: 0;opacity:0.01;}
 	.id_left,.id_right{display:block;float:left;width:41%;position:relative;margin-left:6%;}
 	.id_left img,.id_right img{width:100%;height:6rem;}
 	.id_left p,.id_right p{color:#626262;font-size:.8125rem;text-align:center;line-height:1;margin-top:.625rem;}
@@ -144,7 +144,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502440345547'></script>
+<script src='js/common/main.js?v_1502441521857'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
