--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502441521857"/>
+<link rel="stylesheet" href="css/style.css?v_1502441643411"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -40,7 +40,7 @@
 	.id_hand{margin:0 auto;float:none;}
 	.id_face{margin-top:1rem;}
 	.id_side{margin-top:1rem;}
-	.id_face img,.id_side img{width:100%;height: 6.5rem;}
+	.id_face img,.id_side img{width:100%;height: 6.5rem;opacity:0.01;}
 	.id_face p,.id_side p{color:#626262;font-size:.8125rem;text-align:center;line-height:1;margin:.825rem 0;}
 	.id_face input,.id_side input{position:absolute;width:100%;height:100%;top:0;left:0; bottom: 0;opacity:0.01;}
 	.id_left,.id_right{display:block;float:left;width:41%;position:relative;margin-left:6%;}
@@ -144,7 +144,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502441521857'></script>
+<script src='js/common/main.js?v_1502441643411'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
