--- a/loan/loan_step2-id.html
+++ b/loan/loan_step2-id.html
@@ -23,7 +23,7 @@
 
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="css/base.css"/>
-<link rel="stylesheet" href="css/style.css?v_1502441643411"/>
+<link rel="stylesheet" href="css/style.css?v_1502441727021"/>
 <script>
 	// 项目根路径
 	// window._appPath = "http://210.14.129.41:8080/";
@@ -60,7 +60,7 @@
     position: absolute;
     left: 50%;
     top: 0.8rem;z-index: -1;
-    margin-left: -2.5rem;}
+    margin-left: -2.5rem;opacity: 1}
     </style>
     
 <script src="js/loan/exif.js"></script>
@@ -144,7 +144,7 @@
 <script src='js/lib/vue/vue-resource.min.js'></script>
 <script src='js/common/dictionary.js'></script>
 <script src='js/common/common.js'></script>
-<script src='js/common/main.js?v_1502441643411'></script>
+<script src='js/common/main.js?v_1502441727021'></script>
 <!-- <s cript src="data/city.data.js"></script> -->
 <script src="js/loan/step2-id2.js"></script>
 
